@@ -3344,6 +3344,12 @@ then this must match the label of the item.  If more than one item matches, only
      directory to be opened once it is mounted.
    </para></listitem>
 
+
+   <listitem><para><function>Unmount</function>(<parameter>MountPoints</parameter>,
+     [<parameter>Quiet</parameter>])
+     Unmount each directory in the list <parameter>MountPoints</parameter>.
+   </para></listitem>
+
   </itemizedlist>
 
  </appendix>
