@@ -11,7 +11,7 @@
 void action_init(void);
 
 void action_usage(GList *paths);
-void action_mount(GList	*paths, gboolean open_dir, int quiet);
+void action_mount(GList	*paths, gboolean open_dir, gboolean mount, int quiet);
 void action_delete(GList *paths);
 void action_chmod(GList *paths, gboolean force_recurse, const char *action);
 void action_find(GList *paths);
